# LLM_kansai

./: .env.example  .gitignore  AGENTS.md  README.md  chat.py  main.py  pyproject.toml
data/: osaka_patterns.json  osaka_style_guide.md
data/osaka_data_v4/: test.jsonl  train.jsonl  valid.jsonl
scripts/: clean_data_v2.py  enhance_diversity.py  eval_v4.py  step1_1_collect_data.py  step1_2_build_osaka_patterns.py  step1_3_local_convert.py  step1_3_osaka_convert.py  step1_4_format_data.py
