[project]
name = "llm-kansai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "datasets>=4.8.4",
    "huggingface-hub>=1.8.0",
    "mlx-lm[train]>=0.31.1",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
]
